// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FighterList renders with empty items array 1`] = `
<div
  className="ui basic segment sc-bdVaJa eHQWUv"
>
  <div
    className="ui container sc-bwzfXH dnVPVd"
  >
    <div
      className="ui segments"
    />
  </div>
</div>
`;

exports[`FighterList renders with no props 1`] = `
<div
  className="ui basic segment sc-bdVaJa eHQWUv"
>
  <div
    className="ui container sc-bwzfXH dnVPVd"
  >
    <div
      className="ui segments"
    />
  </div>
</div>
`;

exports[`FighterList renders with two items 1`] = `
<div
  className="ui basic segment sc-bdVaJa eHQWUv"
>
  <div
    className="ui container sc-bwzfXH dnVPVd"
  >
    <div
      className="ui segments"
    >
      <div
        className="ui segment"
      >
        <div
          className="item"
        >
          <div
            className="content"
          >
            <div
              className="header"
            >
              1
            </div>
            <div
              className="header"
            >
              Fighter Name
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
